--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>TITLE</title>
 </head>
 <body>
+    <button class="ROCK">Rock</button>
+    <button class="PAPER">Paper</button>
+    <button class="SCISSORS">Scissors</button>
     <script src="javascript.js"></script>
 </body>
 </html>
