--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <title>TITLE</title>
 </head>
 <body>
-    <button class="ROCK">Rock</button>
-    <button class="PAPER">Paper</button>
-    <button class="SCISSORS">Scissors</button>
+    <div class="container">
+        <ul>
+            <li><button class="ROCK">Rock</button></li>
+            <li><button class="PAPER">Paper</button></li>
+            <li><button class="SCISSORS">Scissors</button></li>
+        </ul>
+        <div class="result"></div>
+        <div class="score"></div>
+    </div>
     <script src="javascript.js"></script>
 </body>
 </html>
